--- a/.github/workflows/qiniu_main.yml
+++ b/.github/workflows/qiniu_main.yml
@@ -26,9 +26,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          git clone git@github.com:qiniu/qshell.git
-          cd qshell
-          go build -o qshell
+         yum install qshell -y
       - name: Upload Files
         run: |    
           ./qshell account -- ${{ secrets.qiniu_AccessKey }} ${{ secrets.qiniu_SecretKey }} github
